--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </p>
 
         <p>
-          I'm good boy who eats and shits whenever I urge to. I intend to make people my puppet so they can listen to me. I try to make other people laugh so that I can feel declining screaming of inner <demons class=""></demons>
+          I'm good boy who eats and shits whenever I urge to. I intend to make people my puppet so they can listen to me. I try to make other people laugh so that I can feel declining screaming of inner demons
         </p>
 
         <p>
